Resume Updated in two page

--- a/index.html
+++ b/index.html
@@ -1,178 +1,240 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Software Developer with expertise in ASP.NET Core, SQL, Angular, React, and C#">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Software Developer with expertise in ASP.NET Core, SQL, Angular, React, and C#"
+    />
     <title>Parmar Raj - Software Developer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-</head>
+  </head>
 
-<body>
-    <div class="container" id="resume">
-        <header class="header">
-            <h1>Parmar Raj</h1>
-            <div class="contact-info">
-                <p><span class="info-label">Email:</span> <a
-                        href="mailto:parmar2003rp@gmail.com">parmar2003rp@gmail.com</a></p>
-                <p><span class="info-label">Phone:</span> <a href="tel:+917984297457">+91 7984297457</a></p>
-                <p><span class="info-label">Date of Birth:</span> September 17, 2003</p>
-            </div>
-            <h2 class="title">Software Developer</h2>
-        </header>
+  <body>
+    <div class="container" id="resume-page1">
+      <header class="header">
+        <h1>Parmar Raj</h1>
+        <div class="contact-info">
+          <p>
+            <span class="info-label">Email:</span>
+            <a href="mailto:parmar2003rp@gmail.com">parmar2003rp@gmail.com</a>
+          </p>
+          <p>
+            <span class="info-label">Phone:</span>
+            <a href="tel:+917984297457">+91 7984297457</a>
+          </p>
+          <p>
+            <span class="info-label">Date of Birth:</span> September 17, 2003
+          </p>
+        </div>
+        <h2 class="title">Software Developer</h2>
+      </header>
 
-        <section class="summary">
-            <h2>Professional Summary</h2>
-            <p>Results-driven Software Developer with expertise in full-stack development and building scalable
-                applications. Proficient in ASP.NET Core, SQL, Angular, and React.js. Demonstrated experience in
-                implementing validations, optimizing databases, and delivering innovative software solutions. Strong
-                problem-solving abilities and commitment to writing clean, maintainable code.</p>
-        </section>
+      <section class="summary">
+        <h2>Professional Summary</h2>
+        <p>
+          Results-driven Software Developer with expertise in full-stack
+          development and building scalable applications. Proficient in ASP.NET
+          Core, SQL, Angular, and React.js. Demonstrated experience in
+          implementing validations, optimizing databases, and delivering
+          innovative software solutions. Strong problem-solving abilities and
+          commitment to writing clean, maintainable code.
+        </p>
+      </section>
 
-        <section class="skills">
-            <h2>Technical Skills</h2>
-            <ul>
-                <li>ASP.NET Core</li>
-                <li>SQL & Database Management</li>
-                <li>Angular</li>
-                <li>JavaScript/TypeScript</li>
-                <li>React.js</li>
-                <li>C#</li>
-                <li>SQLite</li>
-                <li>Full Stack Development</li>
-                <li>API Development</li>
-                <li>Version Control (Git)</li>
-            </ul>
-        </section>
+      <section class="skills">
+        <h2>Technical Skills</h2>
+        <ul>
+          <li>ASP.NET Core</li>
+          <li>SQL & Database Management</li>
+          <li>Angular</li>
+          <li>JavaScript/TypeScript</li>
+          <li>React.js</li>
+          <li>C#</li>
+          <li>SQLite</li>
+          <li>Full Stack Development</li>
+          <li>API Development</li>
+          <li>Version Control (Git)</li>
+        </ul>
+      </section>
 
-        <section class="experience">
-            <h2>Professional Experience</h2>
-            <div class="job">
-                <h3>Full Stack Developer</h3>
-                <div class="job-info">
-                    <span>Pykens Systems LLP</span>
-                    <span>Remote</span>
-                    <span>January 2025 - Present</span>
-                </div>
-                <ul>
-                    <li>Contributed to the APC-ERP project, developing frontend interfaces with Angular and TypeScript
-                        while implementing backend APIs using .NET and C# with PostgreSQL database</li>
-                    <li>Gained comprehensive full-stack exposure through end-to-end software development lifecycle,
-                        working with complex data structures and business logic</li>
-                    <li>Practiced Agile methodology using JIRA for task management, participating in daily stand-ups,
-                        sprint reviews, and retrospectives</li>
-                    <li>Utilized GitHub for version control, implementing branching strategies and participating in code
-                        reviews to maintain clean, maintainable codebases</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h3>Internship - .NET Framework & Angular Developer</h3>
-                <div class="job-info">
-                    <span>Outamation</span>
-                    <span>Nadiad</span>
-                    <span>May 2024 - December 2024</span>
-                </div>
-                <ul>
-                    <li>Developed various modules using .NET Framework and Angular for scalable applications</li>
-                    <li>Collaborated with senior developers to optimize performance and implement best practices</li>
-                </ul>
-            </div>
-            <div class="job">
-                <h3>Internship - Web Development (ASP.NET)</h3>
-                <div class="job-info">
-                    <span>Shivaay Soft</span>
-                    <span>Surat</span>
-                    <span>January 2024 - May 2024</span>
-                </div>
-                <ul>
-                    <li>Developed web applications using ASP.NET to enhance user experience</li>
-                    <li>Maintained existing projects and collaborated on new feature implementation</li>
-                    <li>Designed and maintained APIs for seamless integration</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="projects">
-            <h2>Projects</h2>
-            <div class="project">
-                <h3>Receipt Hub Management Software</h3>
-                <div class="duration">July 2024 - December 2024</div>
-                <ul>
-                    <li>Developed a comprehensive management system using .NET Framework, JavaScript, HTML, CSS, and
-                        SQLite database</li>
-                    <li>Implemented role-based access control and user-friendly entry screens for efficient book and
-                        receipt tracking</li>
-                    <li>Enhanced system usability with intuitive interfaces and streamlined workflow management</li>
-                </ul>
-            </div>
-            <div class="project">
-                <h3>ShoppingCart WebApp</h3>
-                <div class="duration">February 2024 - May 2024</div>
-                <ul>
-                    <li>Built an e-commerce platform using .NET Core 6, JavaScript, and SQLite database</li>
-                    <li>Implemented automated order and cart management system for seamless shopping experience</li>
-                    <li>Developed robust product management features with tracking and reporting capabilities</li>
-                    <li>Designed user-friendly interfaces for both customers and administrators</li>
-                </ul>
-            </div>
-        </section>
-
-        <section class="education">
-            <h2>Education</h2>
-            <div class="edu-item">
-                <h3>Bachelor of Information Technology</h3>
-                <div class="edu-info">
-                    <span>Government Engineering College, Bhavnagar</span>
-                    <span>2020 - 2024</span>
-                    <span>CGPA: 7.28</span>
-                </div>
-            </div>
-            <div class="edu-item">
-                <h3>HSC (Higher Secondary Certificate)</h3>
-                <div class="edu-info">
-                    <span>Radiant School of Science, Gandhinagar</span>
-                    <span>2018 - 2020</span>
-                    <span>Percentage: 70.62%</span>
-                </div>
-            </div>
-            <div class="edu-item">
-                <h3>SSC (Secondary School Certificate)</h3>
-                <div class="edu-info">
-                    <span>Chankya Vidhya Sankul, Dhrangadhra</span>
-                    <span>2017 - 2018</span>
-                    <span>Percentage: 85.86%</span>
-                </div>
-            </div>
-        </section>
-
-        <section class="languages">
-            <h2>Languages</h2>
-            <ul>
-                <li>English <span class="proficiency">(Professional Working)</span></li>
-                <li>Gujarati <span class="proficiency">(Native)</span></li>
-                <li>Hindi <span class="proficiency">(Professional Working)</span></li>
-            </ul>
-        </section>
-
-        <section class="interests">
-            <h2>Additional Skills</h2>
-            <ul>
-                <li>Video Editing</li>
-                <li>Problem Solving</li>
-                <li>Team Collaboration</li>
-            </ul>
-        </section>
+      <section class="experience">
+        <h2>Professional Experience</h2>
+        <div class="job">
+          <h3>Full Stack Developer</h3>
+          <div class="job-info">
+            <span>Pykens Systems LLP</span>
+            <span>Remote</span>
+            <span>January 2025 - Present</span>
+          </div>
+          <ul>
+            <li>
+              Contributed to the APC-ERP project, developing frontend interfaces
+              with Angular and TypeScript while implementing backend APIs using
+              .NET and C# with PostgreSQL database
+            </li>
+            <li>
+              Gained comprehensive full-stack exposure through end-to-end
+              software development lifecycle, working with complex data
+              structures and business logic
+            </li>
+            <li>
+              Practiced Agile methodology using JIRA for task management,
+              participating in daily stand-ups, sprint reviews, and
+              retrospectives
+            </li>
+            <li>
+              Utilized GitHub for version control, implementing branching
+              strategies and participating in code reviews to maintain clean,
+              maintainable codebases
+            </li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>Internship - .NET Framework & Angular Developer</h3>
+          <div class="job-info">
+            <span>Outamation</span>
+            <span>Nadiad</span>
+            <span>May 2024 - December 2024</span>
+          </div>
+          <ul>
+            <li>
+              Developed various modules using .NET Framework and Angular for
+              scalable applications
+            </li>
+            <li>
+              Collaborated with senior developers to optimize performance and
+              implement best practices
+            </li>
+          </ul>
+        </div>
+        <div class="job">
+          <h3>Internship - Web Development (ASP.NET)</h3>
+          <div class="job-info">
+            <span>Shivaay Soft</span>
+            <span>Surat</span>
+            <span>January 2024 - May 2024</span>
+          </div>
+          <ul>
+            <li>
+              Developed web applications using ASP.NET to enhance user
+              experience
+            </li>
+            <li>
+              Maintained existing projects and collaborated on new feature
+              implementation
+            </li>
+            <li>Designed and maintained APIs for seamless integration</li>
+          </ul>
+        </div>
+      </section>
     </div>
+
+    <div class="container" id="resume-page2">
+      <section class="projects">
+        <h2>Projects</h2>
+        <div class="project">
+          <h3>Receipt Hub Management Software</h3>
+          <div class="duration">July 2024 - December 2024</div>
+          <ul>
+            <li>
+              Developed a comprehensive management system using .NET Framework,
+              JavaScript, HTML, CSS, and SQLite database
+            </li>
+            <li>
+              Implemented role-based access control and user-friendly entry
+              screens for efficient book and receipt tracking
+            </li>
+            <li>
+              Enhanced system usability with intuitive interfaces and
+              streamlined workflow management
+            </li>
+          </ul>
+        </div>
+        <div class="project">
+          <h3>ShoppingCart WebApp</h3>
+          <div class="duration">February 2024 - May 2024</div>
+          <ul>
+            <li>
+              Built an e-commerce platform using .NET Core 6, JavaScript, and
+              SQLite database
+            </li>
+            <li>
+              Implemented automated order and cart management system for
+              seamless shopping experience
+            </li>
+            <li>
+              Developed robust product management features with tracking and
+              reporting capabilities
+            </li>
+            <li>
+              Designed user-friendly interfaces for both customers and
+              administrators
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <section class="education">
+        <h2>Education</h2>
+        <div class="edu-item">
+          <h3>Bachelor of Information Technology</h3>
+          <div class="edu-info">
+            <span>Government Engineering College, Bhavnagar</span>
+            <span>2020 - 2024</span>
+            <span>CGPA: 7.28</span>
+          </div>
+        </div>
+        <div class="edu-item">
+          <h3>HSC (Higher Secondary Certificate)</h3>
+          <div class="edu-info">
+            <span>Radiant School of Science, Gandhinagar</span>
+            <span>2018 - 2020</span>
+            <span>Percentage: 70.62%</span>
+          </div>
+        </div>
+        <div class="edu-item">
+          <h3>SSC (Secondary School Certificate)</h3>
+          <div class="edu-info">
+            <span>Chankya Vidhya Sankul, Dhrangadhra</span>
+            <span>2017 - 2018</span>
+            <span>Percentage: 85.86%</span>
+          </div>
+        </div>
+      </section>
+
+      <section class="languages">
+        <h2>Languages</h2>
+        <ul>
+          <li>
+            English <span class="proficiency">(Professional Working)</span>
+          </li>
+          <li>Gujarati <span class="proficiency">(Native)</span></li>
+          <li>Hindi <span class="proficiency">(Professional Working)</span></li>
+        </ul>
+      </section>
+
+      <section class="interests">
+        <h2>Additional Skills</h2>
+        <ul>
+          <li>Video Editing</li>
+          <li>Problem Solving</li>
+          <li>Team Collaboration</li>
+        </ul>
+      </section>
+    </div>
+
     <div class="download-buttons">
-        <button class="download-btn" onclick="downloadPDF()">Download PDF</button>
-        <button class="download-btn" onclick="downloadJPEG()">Download JPEG</button>
+      <button class="download-btn" onclick="downloadPDF()">Download PDF</button>
+      <button class="download-btn" onclick="downloadJPEG()">
+        Download JPEG
+      </button>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
